# gosh.agent

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
docs/: agent.md
specs/: agent_config_unification.md  fix_multi_agent_state_dir.md  gosh_agent_v1.md  platform_filter.md
src/: auth.rs  courier.rs  crypto.rs  join.rs  keychain.rs  main.rs  sandbox.rs  test_support.rs  tests.rs  watcher.rs
src/agent/: budget.rs  cli.rs  config.rs  config_loader.rs  extract.rs  mod.rs  pricing.rs  resolve.rs  router.rs  run.rs  task.rs
src/agent/prompts/: execution_system.txt  review.txt  review_repair.txt
src/client/: memory.rs  memory_inject.rs  mod.rs  secrets.rs  transport.rs
src/llm/: anthropic.rs  local_cli.rs  mod.rs  multi.rs
src/oauth/: admin_token.rs  clients.rs  mod.rs  sessions.rs  tokens.rs
src/plugin/: autostart.rs  buffer.rs  capture.rs  config.rs  mod.rs  net.rs  offset.rs  proxy.rs  setup.rs  uninstall.rs
src/plugin/platform/: claude.rs  codex.rs  gemini.rs  mod.rs
src/server/: access_log.rs  mcp_events.rs  mod.rs  state.rs
src/server/handlers/: health.rs  mcp_auth.rs  mod.rs
src/server/handlers/admin/: middleware.rs  mod.rs
src/server/handlers/admin/oauth/: clients.rs  mod.rs  sessions.rs  tokens.rs
src/server/handlers/mcp/: courier_subscribe.rs  courier_unsubscribe.rs  create_task.rs  mod.rs  sse.rs  start.rs  status.rs  task_list.rs
src/server/handlers/oauth/: authorize.rs  metadata.rs  mod.rs  register.rs  revoke.rs  token.rs
