[package]
name = "gosh-agent"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "gosh-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
