
[package]
name = "gosh-agent"
version = "0.8.1"
edition = "2021"
license = "MIT"

[[bin]]
name = "gosh-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
keyring = { version = "3", features = ["apple-native", "linux-native"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
sha2 = "0.11"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.13"
aes-gcm = "0.10"
base64 = "0.22"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
which = "8"
zeroize = "1"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[dev-dependencies]
filetime = "0.2"
parking_lot = "0.12"
tempfile = "3"
# Drive the axum router in-process for OAuth integration tests
# (`ServiceExt::oneshot` takes a request, returns the response without
# spinning up a TCP listener). `util` is the only feature we need.
tower = { version = "0.5", features = ["util"] }
# `test-util` is dev-only: it gates `tokio::time::pause` /
# `#[tokio::test(start_paused = true)]`, which we use for deterministic
# retry-delay tests. Cargo merges the feature set with the production
# `["full"]`, so the released binary never carries the test-only APIs.
tokio = { version = "1", features = ["test-util"] }
